--- a/3DALIS/pom.xml
+++ b/3DALIS/pom.xml
@@ -14,7 +14,7 @@
     <name>3DALIS</name>
     <description>3DALIS</description>
     <properties>
-        <java.version>15</java.version>
+        <java.version>16</java.version>
         <repackage.classifier/>
         <spring-native.version>0.10.5</spring-native.version>
     </properties>
@@ -64,6 +64,12 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
